# mapx-style

./: .env.demo  .env.development  .env.schema  .gitignore  .gitmodules  .release-it.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPERS.md  LICENSE  Makefile  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  s3_structure.json  vite.config.js  vitest.config.js
.github/workflows/: deploy.yml  publish.yml
data/: README.md  catalog.json
data/fonts/: combinations.json  sources.json
data/un_countries/: README.md
public/style/: mapx_style_legacy_mapbox.json  sample_protomaps.json  style.json  style_debug.json
scripts/: build_basemap.py  build_bathymetry.py  build_borders.py  build_borders_wmo.py  build_glyphs.py  build_mask.py  build_sprites.py  build_style.py  convert_fonts.py  download_fonts.py  release_sync_version.cjs
scripts/patterns/: config.json  index.cjs
scripts/s3/: catalog.py  delete.py  get_catalog.py  init_prompt.md  instruction.md  list_objects.py  range_test.py  s3_client.py  s3_utils.py  set_acl.py  stream_upload.py  stream_upload_progress.py  style_version.py  upload.py
scripts/style/: generator_roads.js
skills/: build_basemap.py  build_bathymetry.py  build_borders.py  build_glyphs.py  build_mask.py  build_sprites.py  download_fonts.py
skills/patterns/: config.json  index.cjs
skills/s3/: catalog.py  delete.py  instruction.md  list_objects.py  set_acl.py  (+5 more)
src/: index.html  main.js  mapcompare.js  sprite_demo.js  sprite_demo.test.js
tests/: helpers.js  language.spec.js  sprite_demo.spec.js  themes.spec.js
(+6 files in other folders)
