[project]
name = "mapx-style"
version = "0.1.0"
description = "MapX style assets and S3 management scripts"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "gftools>=0.9.994",
    "numpy>=2.0",
    "python-dotenv>=1.0",
    "rasterio>=1.4",
    "requests>=2.31",
    "rich>=13.0",
    "scipy>=1.13",
    "fonttools[woff]>=4.0",
]
